Implement profiling utilities for PIE/ePIE/rPIE/DM and analyze HPC bottlenecks

--- a/tutorial/PtychoEP_EM.ipynb
+++ b/tutorial/PtychoEP_EM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,10 +29,10 @@
     "from utils import denoiser\n",
     "from utils import message_passing as mp\n",
     "from utils import PtychoEP\n",
-    "from utils import ptycho\n",
+    "from utils import ptycho_legacy\n",
     "from utils import test\n",
     "from utils import config\n",
-    "from utils import engines\n",
+    "from utils import engines_legacy\n",
     "from utils import error\n",
     "from utils import matrix as mt"
    ]
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
     "noise = 0.001039\n",
     "scan_positions = []\n",
     "\n",
-    "c = 9\n",
+    "c = 8\n",
     "for i in range(21):\n",
     "    for j in range(21):\n",
     "        scan_positions.append([165 + c * i + np.random.randint(-2,2), 165 + c * j + np.random.randint(-2,2)])\n",
