Add profiling summary and benchmark results for ptychographic algorithms

--- a/experiments/notebook/basic_ptycho.ipynb
+++ b/experiments/notebook/basic_ptycho.ipynb
@@ -49,18 +49,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PtychoEP.utils.backend import set_backend, np\n",
+    "from backend.backend import set_backend, np\n",
     "set_backend(\"numpy\")\n",
     "\n",
-    "from PtychoEP.utils.ptycho.core import Ptycho\n",
-    "from PtychoEP.utils.io_utils import load_data_image\n",
+    "from ptycho.core import Ptycho\n",
+    "from utils.io_utils import load_data_image\n",
     "from PtychoEP.utils.rng_utils import normal, get_rng\n",
     "\n",
     "ptycho = Ptycho()\n",
     "obj = load_data_image(\"cameraman.png\") * np().exp(1j * np().pi * load_data_image(\"eagle.png\"))\n",
     "rng = get_rng(seed = 50)\n",
     "\n",
-    "from PtychoEP.utils.ptycho.aperture_utils import circular_aperture\n",
+    "from ptycho.aperture_utils import circular_aperture\n",
     "probe = circular_aperture(size = 64, r = 0.48)\n",
     "\n",
     "ptycho.set_object(obj)\n",
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "from PtychoEP.utils.ptycho.scan_utils import generate_spiral_scan_positions\n",
+    "from ptycho.scan_utils import generate_spiral_scan_positions\n",
     "\n",
     "positions = generate_spiral_scan_positions(image_size=512, probe_size=64, step = 22, num_points=400)\n",
     "print(f\"Generated {len(positions)} scan positions\")"
@@ -134,7 +134,7 @@
    "source": [
     "ptycho.forward_and_set_diffraction(positions)\n",
     "\n",
-    "from PtychoEP.utils.ptycho.visualize import compute_illumination, show_scan_and_diffs\n",
+    "from ptycho.visualize import compute_illumination, show_scan_and_diffs\n",
     "scan_img, alpha = compute_illumination(ptycho)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "from PtychoEP.utils.ptycho.noise import GaussianNoise, PoissonNoise\n",
+    "from ptycho.noise import GaussianNoise, PoissonNoise\n",
     "\n",
     "GaussianNoise(var=1e-5) @ ptycho\n",
     "print(\"Gaussian noise SNR [dB]:\", ptycho.noise_stats[\"snr_mean_db\"])"
@@ -193,16 +193,16 @@
    ],
    "source": [
     "# バックエンド設定\n",
-    "from PtychoEP.utils.backend import set_backend, np\n",
+    "from backend.backend import set_backend, np\n",
     "set_backend(\"numpy\")  # まずはCPUで試す\n",
     "\n",
     "# 必要モジュールのインポート\n",
-    "from PtychoEP.utils.ptycho.core import Ptycho\n",
-    "from PtychoEP.utils.io_utils import load_data_image\n",
-    "from PtychoEP.utils.ptycho.scan_utils import generate_spiral_scan_positions\n",
+    "from ptycho.core import Ptycho\n",
+    "from utils.io_utils import load_data_image\n",
+    "from ptycho.scan_utils import generate_spiral_scan_positions\n",
     "from PtychoEP.utils.engines.pie import PIE\n",
-    "from PtychoEP.utils.ptycho.noise import GaussianNoise\n",
-    "from PtychoEP.utils.ptycho.visualize import compute_illumination\n",
+    "from ptycho.noise import GaussianNoise\n",
+    "from ptycho.visualize import compute_illumination\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# --- データ準備 ---\n",
@@ -314,15 +314,15 @@
    ],
    "source": [
     "# ===== Backend設定 =====\n",
-    "from PtychoEP.utils.backend import set_backend, np\n",
+    "from backend.backend import set_backend, np\n",
     "set_backend(\"numpy\")   # GPUを使うなら \"cupy\"\n",
     "\n",
     "# ===== 必要モジュール =====\n",
-    "from PtychoEP.utils.ptycho.core import Ptycho\n",
-    "from PtychoEP.utils.io_utils import load_data_image\n",
-    "from PtychoEP.utils.ptycho.scan_utils import generate_spiral_scan_positions\n",
+    "from ptycho.core import Ptycho\n",
+    "from utils.io_utils import load_data_image\n",
+    "from ptycho.scan_utils import generate_spiral_scan_positions\n",
     "from PtychoEP.utils.engines.ptycho_ep.core import PtychoEP\n",
-    "from PtychoEP.utils.ptycho.noise import GaussianNoise\n",
+    "from ptycho.noise import GaussianNoise\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# ===== データ準備 =====\n",
@@ -407,15 +407,15 @@
    ],
    "source": [
     "# バックエンド設定\n",
-    "from PtychoEP.utils.backend import set_backend, np\n",
+    "from backend.backend import set_backend, np\n",
     "set_backend(\"numpy\")  # まずはCPUで試す\n",
     "\n",
     "# 必要モジュールのインポート\n",
-    "from PtychoEP.utils.ptycho.core import Ptycho\n",
-    "from PtychoEP.utils.io_utils import load_data_image\n",
-    "from PtychoEP.utils.ptycho.scan_utils import generate_spiral_scan_positions\n",
+    "from ptycho.core import Ptycho\n",
+    "from utils.io_utils import load_data_image\n",
+    "from ptycho.scan_utils import generate_spiral_scan_positions\n",
     "from PtychoEP.utils.engines.epie import ePIE\n",
-    "from PtychoEP.utils.ptycho.visualize import compute_illumination\n",
+    "from ptycho.visualize import compute_illumination\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# --- データ準備 ---\n",
@@ -585,15 +585,15 @@
    ],
    "source": [
     "# バックエンド設定\n",
-    "from PtychoEP.utils.backend import set_backend, np\n",
+    "from backend.backend import set_backend, np\n",
     "set_backend(\"numpy\")  # まずはCPUで試す\n",
     "\n",
     "# 必要モジュールのインポート\n",
-    "from PtychoEP.utils.ptycho.core import Ptycho\n",
-    "from PtychoEP.utils.io_utils import load_data_image\n",
-    "from PtychoEP.utils.ptycho.scan_utils import generate_spiral_scan_positions\n",
+    "from ptycho.core import Ptycho\n",
+    "from utils.io_utils import load_data_image\n",
+    "from ptycho.scan_utils import generate_spiral_scan_positions\n",
     "from PtychoEP.utils.engines.rpie import rPIE\n",
-    "from PtychoEP.utils.ptycho.visualize import compute_illumination\n",
+    "from ptycho.visualize import compute_illumination\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# --- データ準備 ---\n",
@@ -763,15 +763,15 @@
    ],
    "source": [
     "# バックエンド設定\n",
-    "from PtychoEP.utils.backend import set_backend, np\n",
+    "from backend.backend import set_backend, np\n",
     "set_backend(\"numpy\")  # まずはCPUで試す\n",
     "\n",
     "# 必要モジュールのインポート\n",
-    "from PtychoEP.utils.ptycho.core import Ptycho\n",
-    "from PtychoEP.utils.io_utils import load_data_image\n",
-    "from PtychoEP.utils.ptycho.scan_utils import generate_spiral_scan_positions\n",
-    "from PtychoEP.utils.engines.difference_map import DifferenceMap\n",
-    "from PtychoEP.utils.ptycho.visualize import compute_illumination\n",
+    "from ptycho.core import Ptycho\n",
+    "from utils.io_utils import load_data_image\n",
+    "from ptycho.scan_utils import generate_spiral_scan_positions\n",
+    "from classic_engines.difference_map import DifferenceMap\n",
+    "from ptycho.visualize import compute_illumination\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# --- データ準備 ---\n",
