--- a/experiments/notebook/known_probe.ipynb
+++ b/experiments/notebook/known_probe.ipynb
@@ -89,18 +89,18 @@
     "from dataclasses import dataclass\n",
     "from typing import Optional\n",
     "\n",
-    "from PtychoEP.utils.backend import set_backend, np\n",
+    "from backend.backend import set_backend, np\n",
     "set_backend(\"numpy\")\n",
     "\n",
-    "from PtychoEP.utils.ptycho.core import Ptycho  # Ptychoコンテナ\n",
-    "from PtychoEP.utils.io_utils import load_data_image\n",
+    "from ptycho.core import Ptycho  # Ptychoコンテナ\n",
+    "from utils.io_utils import load_data_image\n",
     "from PtychoEP.utils.rng_utils import get_rng\n",
     "\n",
-    "from PtychoEP.utils.ptycho.aperture_utils import circular_aperture\n",
-    "from PtychoEP.utils.ptycho.scan_utils import generate_spiral_scan_positions\n",
-    "from PtychoEP.utils.ptycho.visualize import compute_illumination, show_scan_and_diffs\n",
+    "from ptycho.aperture_utils import circular_aperture\n",
+    "from ptycho.scan_utils import generate_spiral_scan_positions\n",
+    "from ptycho.visualize import compute_illumination, show_scan_and_diffs\n",
     "\n",
-    "from PtychoEP.utils.ptycho.noise import GaussianNoise  # Optional: PoissonNoise も可\n",
+    "from ptycho.noise import GaussianNoise  # Optional: PoissonNoise も可\n",
     "from PtychoEP.utils.engines.pie import PIE\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -232,16 +232,16 @@
     "# =========================\n",
     "\n",
     "# --- Backend: \"numpy\" or \"cupy\"\n",
-    "from PtychoEP.utils.backend import set_backend, np\n",
+    "from backend.backend import set_backend, np\n",
     "set_backend(\"numpy\")\n",
     "\n",
     "# --- Import core components\n",
-    "from PtychoEP.utils.ptycho.core import Ptycho\n",
-    "from PtychoEP.utils.io_utils import load_data_image\n",
+    "from ptycho.core import Ptycho\n",
+    "from utils.io_utils import load_data_image\n",
     "from PtychoEP.utils.rng_utils import get_rng\n",
-    "from PtychoEP.utils.ptycho.aperture_utils import circular_aperture\n",
-    "from PtychoEP.utils.ptycho.scan_utils import generate_spiral_scan_positions\n",
-    "from PtychoEP.utils.ptycho.noise import GaussianNoise, PoissonNoise\n",
+    "from ptycho.aperture_utils import circular_aperture\n",
+    "from ptycho.scan_utils import generate_spiral_scan_positions\n",
+    "from ptycho.noise import GaussianNoise, PoissonNoise\n",
     "from PtychoEP.utils.engines.ptycho_ep.core import PtychoEP\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -347,7 +347,7 @@
    "outputs": [],
    "source": [
     "# ===== Metrics: global phase alignment + PMSE/NMSE/PSNR =====\n",
-    "from PtychoEP.utils.backend import np\n",
+    "from backend.backend import np\n",
     "\n",
     "def _vdot_masked(a, b, mask=None):\n",
     "    if mask is None:\n",
