Add experimental script for blind reconstruction.

--- a/experiments/notebook/basic_ptycho.ipynb
+++ b/experiments/notebook/basic_ptycho.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "from ptycho.core import Ptycho\n",
     "from utils.io_utils import load_data_image\n",
-    "from PtychoEP.utils.rng_utils import normal, get_rng\n",
+    "from ptychoep.utils.rng_utils import normal, get_rng\n",
     "\n",
     "ptycho = Ptycho()\n",
     "obj = load_data_image(\"cameraman.png\") * np().exp(1j * np().pi * load_data_image(\"eagle.png\"))\n",
@@ -200,7 +200,7 @@
     "from ptycho.core import Ptycho\n",
     "from utils.io_utils import load_data_image\n",
     "from ptycho.scan_utils import generate_spiral_scan_positions\n",
-    "from PtychoEP.utils.engines.pie import PIE\n",
+    "from ptychoep.utils.engines.pie import PIE\n",
     "from ptycho.noise import GaussianNoise\n",
     "from ptycho.visualize import compute_illumination\n",
     "import matplotlib.pyplot as plt\n",
@@ -321,7 +321,7 @@
     "from ptycho.core import Ptycho\n",
     "from utils.io_utils import load_data_image\n",
     "from ptycho.scan_utils import generate_spiral_scan_positions\n",
-    "from PtychoEP.utils.engines.ptycho_ep.core import PtychoEP\n",
+    "from ptychoep.utils.engines.ptycho_ep.core import PtychoEP\n",
     "from ptycho.noise import GaussianNoise\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -414,7 +414,7 @@
     "from ptycho.core import Ptycho\n",
     "from utils.io_utils import load_data_image\n",
     "from ptycho.scan_utils import generate_spiral_scan_positions\n",
-    "from PtychoEP.utils.engines.epie import ePIE\n",
+    "from ptychoep.utils.engines.epie import ePIE\n",
     "from ptycho.visualize import compute_illumination\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -592,7 +592,7 @@
     "from ptycho.core import Ptycho\n",
     "from utils.io_utils import load_data_image\n",
     "from ptycho.scan_utils import generate_spiral_scan_positions\n",
-    "from PtychoEP.utils.engines.rpie import rPIE\n",
+    "from ptychoep.utils.engines.rpie import rPIE\n",
     "from ptycho.visualize import compute_illumination\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
